# what-weather

./: Cargo.toml  LICENSE  README.md  daily_full_response.json  daily_partial_response.json
.github/workflows/: ci.yaml
docs/: requirements.md
src/: adapters.rs  controller.rs  domain.rs  external.rs  format.rs  lib.rs  main.rs  output.rs  port.rs  types.rs  view.rs  weather_reporter.rs
src/adapters/: console_presenter.rs  fake_geolocation.rs  fake_weather.rs  gateways.rs  presenters.rs
src/adapters/controllers/: cli.rs
src/adapters/presenters/: summary.rs
src/controller/: adapters.rs  driver.rs
src/controller/adapters/: console_presenter.rs  fake_weather.rs
src/domain/: common_forecast.rs  common_format.rs  current.rs  current_list.rs  current_summary.rs  daily_forecast_summary.rs  forecast.rs  forecast_summary.rs  interactors.rs  model.rs  port.rs  today_forecast_summary.rs  types.rs  weather_reporter.rs
src/domain/common/: list_builder.rs
src/domain/current/: list.rs  summary.rs
src/domain/forecast/: common.rs  common_list.rs  daily_list.rs  daily_summary.rs  today_list.rs  today_summary.rs
src/domain/interactors/: weather_reporter.rs
src/domain/model/: reporter.rs  weather_reporter.rs
src/domain/port/: geolocation.rs  output.rs  reporter.rs  weather.rs
src/domain/types/: coords.rs  query.rs  report.rs  weather.rs
src/format/: common.rs
src/input/: cli.rs
src/output/: console.rs  format.rs
src/port/: geolocation.rs  weather.rs
src/types/: attributes.rs  error.rs  query.rs  report.rs  units.rs  weather.rs
src/view/: console.rs
(+17 files in other folders)
