[package]
name = "what-weather"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
mockall = "0.13.1"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143" # remove after testing
strum = { version = "0.27.2", features = ["derive"] }
